syntax = "proto2";
package com.guys.coding.hackathon.proto.notifcation;

// master -> slave

message Crawl {
    required string requestId = 1;
    required string url = 2;
}

message Request {
    oneof is {
        Crawl crawl = 1;
    }
}

// slave -> master

message EntityMatch {
    required string entityId = 1;
    required string value = 2;
    required string count = 3;
}

message CrawlSuccess {
    required string requestId = 1;
    repeated string urls = 2;
    required EntityMatch foundEntities = 3;
}

message CrawlFailure {
    required string requestId = 1;
}

message Response {
    oneof is {
        CrawlSuccess success = 1;
        CrawlFailure failure = 2;
    }
}